Fix layout issues: #39, #53, #54, #55, #59

--- a/src/layouts/all.scss
+++ b/src/layouts/all.scss
@@ -402,9 +402,13 @@ main {
   .blog-post {
 
     padding-top: 40px;
-    margin-bottom: 470px;
+    margin-bottom: 370px;
     display: flex;
     flex-flow: wrap;
+
+    &.has-related-posts {
+      margin-bottom: 370px;
+    }
 
     ul.taglist {
       margin-bottom: 7px;
@@ -527,7 +531,7 @@ main {
       display: flex;
       flex-direction: column;
       align-items: center;
-      padding: 40px;
+      padding: 40px 0;
       background-color: #FFF;
       -webkit-box-shadow: 0 -12px 26px 0 rgba(102, 102, 102, 0.2);
       -moz-box-shadow: 0 -12px 26px 0 rgba(102, 102, 102, 0.2);
@@ -535,7 +539,8 @@ main {
 
       .related-posts-wrapper {
 
-        width: 1050px;
+        padding: 0 160px;
+        width: 100%;
         position: relative;
 
         h3 {
@@ -546,7 +551,6 @@ main {
 
         .related-posts-list-wrapper {
 
-          width: 1050px;
           overflow: hidden;
 
           .related-posts-list {
@@ -605,10 +609,11 @@ main {
 
 .footer {
 
+  max-height: 1600px;
+  padding: 2rem 160px;
   display: flex;
   flex-direction: column;
   align-items: center;
-  padding: 2rem 0;
   align-self: stretch;
   background: #e7e7e7; /* Old browsers */
   background: -moz-linear-gradient(top, #e7e7e7 0%, #ffffff 100%); /* FF3.6-15 */
@@ -621,7 +626,6 @@ main {
     align-items: center;
     justify-content: space-between;
     width: 100%;
-    max-width: 1280px;
 
     .footer-logo {
 
@@ -678,4 +682,14 @@ main {
   align-items: center;
 }
 
-@import "~bulma";
+@import "../../node_modules/bulma/sass/utilities/_all.sass";
+@import "../../node_modules/bulma/sass/base/_all.sass";
+@import "../../node_modules/bulma/sass/elements/button.sass";
+@import "../../node_modules/bulma/sass/elements/container.sass";
+@import "../../node_modules/bulma/sass/elements/form.sass";
+@import "../../node_modules/bulma/sass/elements/title.sass";
+@import "../../node_modules/bulma/sass/components/navbar.sass";
+@import "../../node_modules/bulma/sass/layout/hero.sass";
+@import "../../node_modules/bulma/sass/layout/section.sass";
+
+//@import "~bulma";
