--- a/src/layouts/variables.scss
+++ b/src/layouts/variables.scss
@@ -3,3 +3,5 @@ $secondary: #40A6B9;
 $primary-invert: yellow;
 $navbar-background-color: transparent;
 $navbar-height: 5rem;
+
+$tablet: 768px;
